compiler/testData/diagnostics/tests/incompleteCode/diagnosticWithSyntaxError/incompleteValWithAccessor.kt
// FIR_IDENTICAL
package c

konst i : String get() =<!SYNTAX!><!>